updated purchase orders link on home page to link to get /purchase_orders

--- a/views/index.erb
+++ b/views/index.erb
@@ -24,7 +24,7 @@
           <h2>Let's start churning puppies!</h2>
           <h2>What do you want to manage?</h2>
           <button type="button" class="btn btn-default"><a href="/puppies">Puppies</a></button>
-          <button type="button" class="btn btn-default"><a href="/create_purchase_order">Purchase Orders</a></button>
+          <button type="button" class="btn btn-default"><a href="/purchase_orders">Purchase Orders</a></button>
         </div>
     </div>
   </div>
